# caracara

./: .gitignore  README.md
elixir_control/: .gitignore  README.md  mix.exs
elixir_control/assets/: tailwind.config.js
elixir_control/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
elixir_control/lib/: elixir_control.ex  elixir_control_web.ex
elixir_control/lib/elixir_control/: application.ex  broker_client.ex  broker_connection.ex  mailer.ex  subscriptions.ex  topic_subscriber.ex  topic_worker.ex
elixir_control/lib/elixir_control_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
elixir_control/lib/elixir_control_web/components/: core_components.ex  layouts.ex
elixir_control/lib/elixir_control_web/controllers/: error_html.ex  error_json.ex  page_controller.ex  page_html.ex
elixir_control/lib/elixir_control_web/live/: broker_live.ex
elixir_control/mix/tasks/: protos.compile.ex
elixir_control/test/support/: conn_case.ex
proto/: caracara.proto
rust_broker/: Cargo.toml  README.md  build.rs
rust_broker/.sqlx/: query-4c2954f2bae3eaf84c357540f5f32d9e2f0a10375eacacaa760abb7d1fa9a35a.json  query-514bd1e336a8edc73535b28e2f7b108d1cd7428f529256b741ab9654fdc1a03d.json  query-69b934c0e5cf46a0345f75dfe56ad082b5ce8f7b949702cf1b5f803bff289a01.json  query-87d58e5c0f4be92e10dbc568297cbdf1659478eef60c7bb9f959a13e265919ab.json  query-a8827b75339ef35e72885032d9ab42fa042804de90fe7b041a70ac8c66d65452.json
rust_broker/migrations/: 20250731172940_create_broker_tables.sql
rust_broker/src/: lib.rs  main.rs
rust_broker/tests/: broker_integration.rs
(+4 files in other folders)
