[package]
name = "rust_broker"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.11"
tonic-reflection = "0.11"
prost = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
bytes = "1"
tokio-stream = { version = "0.1", features = ["sync", "net"] }
dashmap = "5.5.3"

[build-dependencies]
tonic-build = "0.11"
